[FIX] Improve spacing of titles

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -343,7 +343,7 @@ tbody tr:nth-child(odd) th {
 .page-title,
 .post-title {
   margin-top: 0;
-  line-height:0.6em;
+  line-height:1em;
   text-align: left;
 }
 
